[gd_scene load_steps=13 format=2]

[ext_resource path="res://script/Dish.gd" type="Script" id=1]
[ext_resource path="res://art/3d_object/plate.glb" type="PackedScene" id=2]
[ext_resource path="res://scenes/MenuFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://script/DishLabel.gd" type="Script" id=4]
[ext_resource path="res://audio/sound_effect/dish_stack.mp3" type="AudioStream" id=5]
[ext_resource path="res://audio/sound_effect/dish_create.mp3" type="AudioStream" id=6]
[ext_resource path="res://audio/sound_effect/dumping.wav" type="AudioStream" id=7]

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.6, 0.6, 0.6 )

[sub_resource type="SpatialMaterial" id=3]
vertex_color_use_as_albedo = true
emission_enabled = true
emission = Color( 0.45098, 0.45098, 0.45098, 1 )
emission_energy = 0.71
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="SphereMesh" id=4]
material = SubResource( 3 )
radius = 0.1
height = 0.2

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CylinderShape" id=1]
radius = 1.39892
height = 1.0945

[node name="Dish" type="RigidBody" groups=["pickup"]]
mode = 1
can_sleep = false
script = ExtResource( 1 )

[node name="plate" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.075, 0, 0, 0, 0.075, 0, 0, 0, 0.075, 0, -0.80074, 0 )

[node name="CollisionShape2" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.70577, 0 )
shape = SubResource( 2 )

[node name="LabelPosition" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.5472, 0 )

[node name="CPUParticles" type="CPUParticles" parent="."]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )
emitting = false
amount = 100
one_shot = true
explosiveness = 0.74
mesh = SubResource( 4 )
gravity = Vector3( -9.8, 0, 0 )
initial_velocity = 10.0
angle = 720.0
angle_random = 1.0
scale_amount_curve = SubResource( 5 )
hue_variation = 1.0
hue_variation_random = 1.0

[node name="DishLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -12.5
margin_right = 25.0
margin_bottom = 12.5
custom_fonts/font = ExtResource( 3 )
text = "num"
align = 1
valign = 1
script = ExtResource( 4 )

[node name="PutDownDish" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "SFX"

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3692, 0 )
shape = SubResource( 1 )

[node name="DishCreated" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "SFX"

[node name="Dumping" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
bus = "SFX"

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
